# okasaki

./: README.md  okasaki.cabal  stack.yaml
src/: BinarySearchTree.hs  BinomialHeap.hs  Deque.hs  LeftistHeap.hs  Lib.hs  PairingHeap.hs  Queue.hs  RedBlackTree.hs  SplayHeap.hs  Stream.hs  WeightBiasedLeftistHeap.hs
