name:                okasaki
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/okasaki#readme
license:             BSD3
license-file:        LICENSE
author:              Oleksandr Dudarenko
maintainer:          mail4chemik@gmail.com
copyright:           2017 nineonine
category:            Exercises
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Chapter2
  build-depends:       base >= 4.7 && < 5
                     , random >= 1.1
                     , QuickCheck >= 2.9.2
  default-language:    Haskell2010

executable okasaki-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , okasaki
  default-language:    Haskell2010

test-suite okasaki-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , okasaki
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/okasaki
